kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: devops-project
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
    -  host: devops-project.com
       http:
         paths:
           - pathType: Prefix
             path: "/"
             backend:
               service:
                 name: app-svc
                 port:
                   number: 8080
